# tome

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.svelte  database.ts  player.ts  store.ts  style.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230128073505_initial.sql
src-tauri/src/: controls.rs  library.rs  main.rs  models.rs  store.rs  tray.rs
src/bindings/: Album.ts  Artist.ts  Genre.ts  Metadata.ts  Playlist.ts  Track.ts
src/lib/: AlbumDetails.svelte  AlbumDropdown.svelte  AlbumView.svelte  Collapsible.svelte  ControlBar.svelte  Icon.svelte  Loader.svelte  Menu.svelte  MenuOption.svelte  Show.svelte  Sidebar.svelte  TrackView.svelte
