[package]
name = "tome"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "linux-protocol-headers", "path-all", "protocol-asset", "system-tray"] }
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1.24", features = ["macros"] }
ts-rs = "6.2"
dotenvy = "0.15"
# souvlaki = { version = "0.6", default-features = false, features = ["use_zbus"] }
souvlaki = { path = "../../souvlaki", default-features = false, features = ["use_zbus"] }
raw-window-handle = "0.5"
walkdir = "2"
lofty = "0.11"
thiserror = "1.0"
md5 = "0.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
